Update with issues

--- a/ws.conf
+++ b/ws.conf
@@ -1,5 +1,5 @@
 #listening	port	number
-ListenPort 5000
+ListenPort 3000
 #document root
 DocumentRoot /home/chinmay/Desktop/5273/PA2/www
 #Default	web	page
@@ -12,8 +12,10 @@ ContentType .png image/png
 ContentType .gif image/gif
 ContentType .jpg image/jpeg
 ContentType .jpeg image/jpeg
-#ContentType .tst test/tst
-#
+ContentType .jpeg image/jpeg
+ContentType .css text/css
+ContentType .js text/javascript
+#ContentType .tx tx/plain
 #connection	timeout – not	needed	if	not	doing	the	extra	credit
 KeepaliveTime 10
-#End of Configuration file 
+#End of Configuration file		
